# laundry-cleaning

./: INVENTORY_CATEGORY_CRUD_IMPLEMENTATION.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: import-issues.md  supabase-schema.sql  sync-and-save-bugfix-plan.md  sync-design.md  sync-explained.md  sync-overview.md  sync-setup-and-testing.md
mobile-app/: README.md  phase-0-foundation.md  phase-1-global-sweep.md  phase-2-transactions.md  phase-3-inventory.md  phase-4-people.md  phase-5-dashboard-charts.md  phase-6-admin.md
scripts/: release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: db.rs  lib.rs
src/app/: app-toaster.tsx  providers.tsx  routes.tsx  updater-context.tsx  use-app-updater.ts
src/app/shell/: app-shell.tsx
src/components/: month-picker.tsx
src/features/assistant/: assistant-context.ts  assistant-provider.tsx  types.ts  use-assistant.ts
src/features/auth/: auth-context.ts  auth-provider.tsx  auth-service.ts  auth-types.ts  use-auth.ts
src/features/backup/: backup-export.ts  backup-import-dialog.tsx  backup-import.ts  backup-types.ts
src/features/exports/: customer-exports.ts  export-service.ts  inventory-exports.ts  staff-exports.ts
src/features/inventory/: inventory-backup.ts
src/features/maintenance/: dedup-dialog.tsx  dedup-scan.ts
src/lib/: app-settings.ts  assistant-settings.ts  export-toast.tsx  format.ts  liquid-units.ts  save-file-download.ts
src/lib/db/: client.ts  (+2 more)
(+94 files in other folders)
